feat: add a "fault" alarm which registers a problem but doesn't send an email alert.  Some devices act flaky, but come back.